<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_vocabularycategory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_vocabulary_category"
    android:background="@color/colorPrimaryDark">

    <TableRow
        android:id="@+id/vocabularyCategoryRow1"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="30%"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:layout_margin="1dp"
            style="@style/VocabularyCategoryButton"
            android:id="@+id/button_category_A1"
            android:layout_column="0"
            android:layout_weight="1"
            android:text="@string/vocabulary_category_a1_text" />

        <Button
            android:layout_margin="1dp"
            style="@style/VocabularyCategoryButton"
            android:id="@+id/button_category_A2"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/vocabulary_category_a2_text" />
    </TableRow>

    <TableRow
        android:id="@+id/vocabularyCategoryRow2"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="30%"
        android:orientation="vertical"
        android:layout_below="@id/vocabularyCategoryRow1">

        <Button
            android:layout_margin="1dp"
            style="@style/VocabularyCategoryButton"
            android:id="@+id/button_category_B1"
            android:layout_weight="1"
            android:layout_column="0"
            android:text="@string/vocabulary_category_b1_text" />

        <Button
            android:layout_margin="1dp"
            style="@style/VocabularyCategoryButton"
            android:id="@+id/button_category_B2"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/vocabulary_category_b2_text" />
    </TableRow>

    <TableRow
        app:layout_widthPercent="100%"
        app:layout_heightPercent="30%"
        android:orientation="vertical"
        android:layout_below="@id/vocabularyCategoryRow2">

        <Button
            android:layout_margin="1dp"
            style="@style/VocabularyCategoryButton"
            android:id="@+id/button_category_C1"
            android:layout_column="0"
            android:layout_weight="1"
            android:text="@string/vocabulary_category_c1_text" />

        <Button
            android:layout_margin="1dp"
            style="@style/VocabularyCategoryButton"
            android:id="@+id/button_category_C2"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/vocabulary_category_c2_text" />
    </TableRow>

</android.support.percent.PercentRelativeLayout>