<resources>
    <string name="app_name">Duel with English</string>
    <string name="button_vocabulary_text">Nauka słów</string>
    <string name="title_activity_lessons_vocabulary_list">LessonsVocabularyList</string>
    <string name="add_words_to_favourite">Dodaj do ulubionych</string>
    <string name="favourite_star_content_description">Gwiazda - dodaję opcję tworzenia listy ulubionych słów</string>
    <string name="favourite_main_button">Lista\nulubionych</string>
    <string name="favourite_list_label_text">Ulubione</string>
    <string name="expandable_activity_label">Poziom języka</string>
    <string name="author_information_activity_label">Informacje o autorze</string>
    <string name="list_of_favourite_menu_item">Lista Ulubionych</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mainMenuTestButton">Test</string>
    <string name="title_activity_author_info">Informacje o autorze</string>

    <!--VocabularyTestPreference-->
    <string name="start_test_button">Rozpocznij test</string>
    <string name="customize_vocabulary_test">Personalizacja testu</string>

    <!--Vocabulary test fragments-->
    <string name="vocabulary_test_write_check_answer">Sprawdź</string>
    <string name="test_write_et_hint">Tutaj wpisz słowo</string>
    <string name="test_choice_en_hint">Przetłumacz słowo na język angielski wybierając prawidłowe tłumaczenie:</string>
    <string name="test_choice_pl_hint">Przetłumacz słowo na język polski wybierając prawidłowe tłumaczenie:</string>
    <string name="test_write_en_hint">Przetłumacz słowo na język angielski  wpisując je w polu poniżej: </string>
    <string name="test_write_pl_hint">Przetłumacz słowo na język polski wpisując je w polu poniżej: </string>
    <string name="test_jigsaw_word_pl_hint">Przetłumacz słowo na język polski, układając je z rozsypanych liter:</string>
    <string name="test_jigsaw_word_en_hint">Przetłumacz słowo na język angielski, układając je z rozsypanych liter:</string>
    <string name="jigsaw_fragment_check_button">Sprawdź</string>
    <string name="Test">Test</string>
    <string name="vocabulary_category_a1_text">A1</string>
    <string name="vocabulary_category_a2_text">A2</string>
    <string name="vocabulary_category_b1_text">B1</string>
    <string name="vocabulary_category_b2_text">B2</string>
    <string name="vocabulary_category_c1_text">C1</string>
    <string name="vocabulary_category_c2_text">C2</string>
    <string name="logo_description">Logo aplikacji</string>
    <string name="rate_app_text">Oceń aplikację</string>
    <string name="send_email_to_author">Napisz do mnie</string>
    <string name="author_info_who_made">Aplikacja stworzona przez: \nBartłomiej Krasicki</string>
    <string name="rate_app_btton_description">Ikona gwiazdki na przycisku oceń aplikację</string>
    <string name="sort">Sortuj</string>
    <string name="a1_lvl">Poziom A1</string>
    <string name="a2_lvl">Poziom A2</string>
    <string name="b1_lvl">Poziom B1</string>
    <string name="b2_lvl">Poziom B2</string>
    <string name="c1_lvl">Poziom C1</string>
    <string name="c2_lvl">Poziom C2</string>
    <string name="show_only">Pokaż wszystkie</string>
    <string name="personalize_test">Personalizuj</string>
    <string name="fav_bar_button_delete">Usuń z listy</string>
    <string name="category_learn_progress">Ikona postępu nauki danej kategorii</string>
    <string name="search_hint">Wyszukaj słowo wpisując je tutaj</string>
    <string name="dictionary_activity_label">Wyszukaj słowa</string>
    <string name="changeSearchLanguage">Zmień język wyszukiwania</string>
    <string name="app_settings">Ustawienia aplikacji</string>
    <string name="dictionary">Słownik</string>
    <string name="about_application">O aplikacji</string>
    <string name="main_menu_app_name">Duel with \nEnglish</string>
</resources>
