<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="true"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/colorPrimaryDark">

        <ListView
            android:id="@+id/vocabularyListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:tag="0"
            android:background="@color/Background"/>

        <Button
            android:id="@+id/startTestFromLesson"
            style="@style/Button.Custom"
            app:layout_widthPercent="100%"
            app:layout_heightPercent="10%"
            android:onClick="startTestButtonOnClick"
            android:layout_alignParentBottom="true"
            android:text="@string/start_test_button" />

</android.support.percent.PercentRelativeLayout>
